--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,95 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
+@article{hijazi2016phonon,
+  title={Phonon heat transport in superlattices: case of Si/SiGe and SiGe/SiGe superlattices},
+  author={Hijazi, M and Kazan, M},
+  journal={AIP Advances},
+  volume={6},
   number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  year={2016},
+  publisher={AIP Publishing}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{hijazi2018fast,
+  title={Fast-forward Langevin dynamics with momentum flips},
+  author={Hijazi, Mahdi and Wilkins, David M and Ceriotti, Michele},
+  journal={The Journal of chemical physics},
+  volume={148},
+  number={18},
+  year={2018},
+  publisher={AIP Publishing},
+  selected={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
+@article{zipoli2018semiempirical,
+  title={Semiempirical molecular dynamics (SEMD) simulations: Parameterization and validation for biological systems precursors},
+  author={Zipoli, Federico and Hijazi, Mahdi and Petraglia, Riccardo and Weber, Val{\'e}ry and Laino, Teodoro},
+  journal={IBM Journal of Research and Development},
+  volume={62},
   number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+  pages={5--1},
+  year={2018},
+  publisher={IBM}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{yin2020structure,
+  title={Structure of a D2 dopamine receptor--G-protein complex in a lipid membrane},
+  author={Yin, Jie and Chen, Kuang-Yui M and Clark, Mary J and Hijazi, Mahdi and Kumari, Punita and Bai, Xiao-chen and Sunahara, Roger K and Barth, Patrick and Rosenbaum, Daniel M},
+  journal={Nature},
+  volume={584},
+  number={7819},
+  pages={125--129},
+  year={2020},
+  publisher={Nature Publishing Group UK London},
+  preview={DD2R_energy_landscape.jpg},
+  selected={true}
+}
+
+@article{keri2022computational,
+  title={Computational rewiring of allosteric pathways reprograms GPCR selective responses to ligands},
+  author={Keri, D{\'a}niel and Hijazi, Mahdi and Oggier, Aur{\'e}lien and Barth, Patrick},
+  journal={bioRxiv},
+  pages={2022--03},
+  year={2022},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{rudden2022deep,
+  title={Deep learning approaches for conformational flexibility and switching properties in protein design},
+  author={Rudden, Lucas SP and Hijazi, Mahdi and Barth, Patrick},
+  journal={Frontiers in Molecular Biosciences},
+  volume={9},
+  pages={928534},
+  year={2022},
+  publisher={Frontiers}
+}
+
+@article{dumas2023uncovering,
+  title={Uncovering and engineering the mechanical properties of the adhesion GPCR ADGRG1 GAIN domain},
+  author={Dumas, L and Marfoglia, M and Yang, B and Hijazi, M and Larabi, AN and Lau, K and Pojer, F and Nash, MA and Barth, P},
+  journal={bioRxiv},
+  pages={2023--04},
+  year={2023},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{jefferson2023computational,
+  title={Computational design of dynamic receptor—peptide signaling complexes applied to chemotaxis},
+  author={Jefferson, Robert E and Oggier, Aur{\'e}lien and F{\"u}glistaler, Andreas and Camviel, Nicolas and Hijazi, Mahdi and Villarreal, Ana Rico and Arber, Caroline and Barth, Patrick},
+  journal={Nature Communications},
+  volume={14},
+  number={1},
+  pages={2875},
+  year={2023},
+  publisher={Nature Publishing Group UK London}
+}
+
+@phdthesis{hijazi2024sequence,
+  title={From Sequence to Dynamics to Function: Computational Design of Allostery and Ligand Selectivity in G-Protein Coupled Receptors},
+  author={Hijazi, Mahdi},
+  year={2024},
+  school={EPFL},
+  preview={art_DD2R.png},
+  selected={true}
 }
