--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,8 @@
   volume={6},
   number={6},
   year={2016},
-  publisher={AIP Publishing}
+  publisher={AIP Publishing},
+  preview={phonon_heat_transport.jpeg}
 }
 
 @article{hijazi2018fast,
@@ -19,7 +20,8 @@
   number={18},
   year={2018},
   publisher={AIP Publishing},
-  selected={true}
+  selected={true},
+  preview={Momentum flips.png}
 }
 
 @article{zipoli2018semiempirical,
@@ -30,7 +32,8 @@
   number={6},
   pages={5--1},
   year={2018},
-  publisher={IBM}
+  publisher={IBM},
+  preview={SEMD_IBM_rdf.png}
 }
 
 @article{yin2020structure,
@@ -42,7 +45,7 @@
   pages={125--129},
   year={2020},
   publisher={Nature Publishing Group UK London},
-  preview={DD2R_energy_landscape.jpg},
+  preview={GPCR_wiggling_gif.gif},
   selected={true}
 }
 
@@ -82,7 +85,8 @@
   number={1},
   pages={2875},
   year={2023},
-  publisher={Nature Publishing Group UK London}
+  publisher={Nature Publishing Group UK London},
+  preview={CXCR4_jefferson.png}
 }
 
 @phdthesis{hijazi2024sequence,
